# jetclash-arena

./: .gitignore  Anchor.toml  Cargo.toml  README.md  ROADMAP.md  ephemeral-validator.toml  index.html  jetclash-architecture.excalidraw  package-lock.json  package.json  pnpm-workspace.yaml  test-debug.mjs  test-game.mjs
.patches/session-keys/: Cargo.toml
.patches/session-keys/src/: lib.rs
client/: package-lock.json  package.json  playwright.config.ts  test-debug-online.mjs  test-diag.mjs  test-game.mjs  test-gameplay.mjs  test-online.mjs  test-play.mjs  vite.config.ts
client/src/: main.ts
client/src/components/: HUD.ts  TxLog.ts
client/src/config/: arena.config.ts  assets.config.ts  game.config.ts  match.config.ts  weapons.config.ts
client/src/entities/: AIController.ts  Player.ts
client/src/net/: ClientPrediction.ts  InputSender.ts  NetworkConfig.ts  StateSubscriber.ts  WalletProvider.ts  index.ts  types.ts
client/src/scenes/: ArenaScene.ts  BootScene.ts  LobbyScene.ts  MainMenuScene.ts  OnlineArenaScene.ts  ResultScene.ts
client/src/types/: index.ts
client/tests/e2e/: game.spec.ts
client/tests/scripts/: devnet-sync.mjs
docs/: 01_PRODUCT_VISION.md  02_MVP_SCOPE.md  03_GAMEPLAY_MECHANICS.md  04_CREDITS_ECONOMY.md  05_TECH_ARCHITECTURE.md  06_ROADMAP_PHASED.md  07_TOKEN_LAUNCH_PLAN_BAGS.md  08_MAGICBLOCK_MIGRATION_PLAN.md  09_METRICS_AND_GTM.md  10_CLAUDE_IMPLEMENTATION_GUIDE.md  MF_ARCHITECTURE_DIAGRAM_BRIEF.md
programs-ecs/components/arena-config/: Cargo.toml
programs-ecs/components/arena-config/src/: lib.rs
programs-ecs/components/match-state/: Cargo.toml
programs-ecs/components/match-state/src/: lib.rs
programs-ecs/components/pickup-state/: Cargo.toml
programs-ecs/components/pickup-state/src/: lib.rs
programs-ecs/components/player-pool/: Cargo.toml
programs-ecs/components/player-pool/src/: lib.rs
programs-ecs/components/player-state/src/: lib.rs
programs-ecs/components/projectile-pool/: Cargo.toml
programs-ecs/components/projectile-pool/src/: lib.rs
programs-ecs/systems/create-match/: Cargo.toml
programs-ecs/systems/create-match/src/: lib.rs
programs-ecs/systems/delegate-match/: Cargo.toml
programs-ecs/systems/delegate-match/src/: lib.rs
programs-ecs/systems/init-arena/: Cargo.toml
programs-ecs/systems/init-arena/src/: lib.rs
programs-ecs/systems/join-match/: Cargo.toml
programs-ecs/systems/join-match/src/: lib.rs
programs-ecs/systems/process-input/: Cargo.toml
programs-ecs/systems/process-input/src/: lib.rs
programs-ecs/systems/ready-up/: Cargo.toml
programs-ecs/systems/ready-up/src/: lib.rs
programs-ecs/systems/settle-match/: Cargo.toml
programs-ecs/systems/settle-match/src/: lib.rs
programs-ecs/systems/start-match/: Cargo.toml
programs-ecs/systems/start-match/src/: lib.rs
programs-ecs/systems/tick-combat/: Cargo.toml
programs-ecs/systems/tick-combat/src/: lib.rs
programs-ecs/systems/tick-physics/: Cargo.toml
programs-ecs/systems/tick-physics/src/: lib.rs
programs-ecs/systems/tick-pickups/: Cargo.toml
programs-ecs/systems/tick-pickups/src/: lib.rs
programs-ecs/systems/tick-projectiles/: Cargo.toml
programs-ecs/systems/tick-projectiles/src/: lib.rs
scripts/: start-local.sh
src/audio/: SoundGenerator.ts
src/components/: HUD.ts
src/config/: assets.config.ts  game.config.ts  player.config.ts
src/entities/: Pickup.ts  Player.ts  Projectile.ts
src/scenes/: ArenaScene.ts  MainMenuScene.ts  ResultScene.ts
src/types/: index.ts
tests/: devnet-test.ts  er-live-test.ts  jetclash-integration.ts  jetclash-stress.ts  jetclash.ts
