[package]
name = "join-match"
version = "0.2.4"
description = "Created with Bolt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "join_match"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["bolt-lang/idl-build"]
anchor-debug = ["bolt-lang/anchor-debug"]
custom-heap = []
custom-panic = []

[dependencies]
bolt-lang.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
match-state = { version = "0.2.4", path = "../../components/match-state", features = ["cpi"] }
player-pool = { version = "0.2.4", path = "../../components/player-pool", features = ["cpi"] }
