[package]
name = "tick-pickups"
version = "0.2.4"
description = "Created with Bolt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tick_pickups"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["bolt-lang/idl-build"]
anchor-debug = ["bolt-lang/anchor-debug"]
custom-heap = []
custom-panic = []

[dependencies]
bolt-lang.workspace = true
serde = { version = "1.0", features = ["derive"] }
match-state = { version = "0.2.4", path = "../../components/match-state", features = ["cpi"] }
player-state = { version = "0.2.4", path = "../../components/player-state", features = ["cpi"] }
pickup-state = { version = "0.2.4", path = "../../components/pickup-state", features = ["cpi"] }
