[package]
name = "tick-projectiles"
version = "0.2.4"
description = "Created with Bolt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tick_projectiles"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["bolt-lang/idl-build"]
anchor-debug = ["bolt-lang/anchor-debug"]
custom-heap = []
custom-panic = []

[dependencies]
bolt-lang.workspace = true
projectile-pool = { version = "0.2.4", path = "../../components/projectile-pool", features = ["cpi"] }
arena-config = { version = "0.2.4", path = "../../components/arena-config", features = ["cpi"] }
